--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,4 +5,4 @@ site_author: CITORUS TEAM
 site_favicon: favicon.ico
 copyright: (c) ООО "Инфогрэйс", 2017
 pages:
-- 1. Описание конфигурации "КЕДР.Диспетчерский пункт: 'index.md'
+- Описание конфигурации «КЕДР.Диспетчерский пункт»: 'index.md'
